CSS ToDo items.

--- a/typescript/Angular.ipynb
+++ b/typescript/Angular.ipynb
@@ -1914,6 +1914,185 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ab4a807e",
+   "metadata": {},
+   "source": [
+    "# CSS Animations\n",
+    "\n",
+    "```HTML\n",
+    "<!DOCTYPE html>\n",
+    "<html>\n",
+    "<head>\n",
+    "<style>\n",
+    "@keyframes exampleAnimation {\n",
+    "  0% { opacity: 0; transform: scale(0); }\n",
+    "  100% { opacity: 1; transform: scale(1); }\n",
+    "}\n",
+    "\n",
+    ".animated {\n",
+    "  animation-name: exampleAnimation;\n",
+    "  animation-duration: 2s;\n",
+    "  /* Other animation properties as needed */\n",
+    "}\n",
+    "\n",
+    "#animatedElement {\n",
+    "  width: 100px;\n",
+    "  height: 100px;\n",
+    "  background-color: red;\n",
+    "  opacity: 0; /* Start invisible */\n",
+    "}\n",
+    "</style>\n",
+    "</head>\n",
+    "<body>\n",
+    "\n",
+    "<button id=\"triggerButton\">Click Me</button>\n",
+    "<div id=\"animatedElement\"></div>\n",
+    "\n",
+    "<script>\n",
+    "document.getElementById('triggerButton').addEventListener('click', function() {\n",
+    "  var element = document.getElementById('animatedElement');\n",
+    "  element.classList.add('animated');\n",
+    "\n",
+    "  element.addEventListener('animationend', function() {\n",
+    "    element.classList.remove('animated');\n",
+    "  });\n",
+    "});\n",
+    "</script>\n",
+    "\n",
+    "</body>\n",
+    "</html>\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "38bbbe82",
+   "metadata": {},
+   "source": [
+    "# CSS Box Model\n",
+    "\n",
+    "The CSS Box Model is a fundamental concept in web design and development, describing how every element on a web page is rendered as a rectangular box. Understanding the box model is crucial for controlling layout and spacing in web design. Here's a breakdown of its components:\n",
+    "\n",
+    "### 1. Content\n",
+    "- **Description**: This is the actual content of the box, where text and images are displayed.\n",
+    "- **Properties**: Controlled by `width` and `height`.\n",
+    "\n",
+    "### 2. Padding\n",
+    "- **Description**: Padding is the space between the content and the border. It's inside the element, so it affects the element's total size.\n",
+    "- **Properties**: Controlled by `padding-top`, `padding-right`, `padding-bottom`, `padding-left`, or the shorthand `padding`.\n",
+    "\n",
+    "### 3. Border\n",
+    "- **Description**: The border surrounds the padding (if any) and content. It's visible if defined and also adds up to the total size of the element.\n",
+    "- **Properties**: Controlled by `border-width`, `border-style`, `border-color`, and other border properties.\n",
+    "\n",
+    "### 4. Margin\n",
+    "- **Description**: Margin is the outermost layer and defines the space between the border of the element and other elements. Unlike padding, margin does not add to the size of the box but affects the space around it.\n",
+    "- **Properties**: Controlled by `margin-top`, `margin-right`, `margin-bottom`, `margin-left`, or the shorthand `margin`.\n",
+    "\n",
+    "### Box Model Visualization\n",
+    "\n",
+    "```\n",
+    "+-----------------------------+\n",
+    "|          Margin             |\n",
+    "|  +-----------------------+  |\n",
+    "|  |       Border          |  |\n",
+    "|  |   +---------------+   |  |\n",
+    "|  |   |   Padding     |   |  |\n",
+    "|  |   |  +---------+  |   |  |\n",
+    "|  |   |  | Content |  |   |  |\n",
+    "|  |   |  |         |  |   |  |\n",
+    "|  |   |  +---------+  |   |  |\n",
+    "|  |   +---------------+   |  |\n",
+    "|  +-----------------------+  |\n",
+    "+-----------------------------+\n",
+    "```\n",
+    "\n",
+    "### Box-sizing Property\n",
+    "- **Description**: CSS3 introduced the `box-sizing` property to change how the box model is calculated.\n",
+    "- **Options**:\n",
+    "  - `content-box` (default): Width and height only include the content.\n",
+    "  - `border-box`: Width and height include content, padding, and border, but not margin. This often makes layouts easier to manage.\n",
+    "\n",
+    "### Practical Implications\n",
+    "- **Layout Control**: Understanding the box model is crucial for precise control of layout, spacing, and alignment.\n",
+    "- **Debugging**: Many layout issues can be traced back to misunderstandings about how padding, borders, and margins interact.\n",
+    "\n",
+    "### Inclusion of Padding and Border in Height and Width \n",
+    "\n",
+    "In CSS, whether the `width` and `height` properties include padding and border depends on the `box-sizing` property. The margin is not included in the width and height calculations regardless of the `box-sizing` value. Here's how it works:\n",
+    "\n",
+    "1. **`box-sizing: content-box`** (Default)\n",
+    "   - With the default `content-box` value, the `width` and `height` properties specify the size of the content area only. Padding and border are added to this specified size. So, the total size of the element is the sum of the width/height, padding, and border.\n",
+    "   - Example: If you have an element with `width: 100px`, `padding: 10px`, and `border: 5px`, its total width will be `100px (content) + 20px (padding) + 10px (border) = 130px`.\n",
+    "   - Margin is outside the border and is not included in these calculations.\n",
+    "\n",
+    "2. **`box-sizing: border-box`**\n",
+    "   - When set to `border-box`, the `width` and `height` properties include both the content and the padding and border, but not the margin.\n",
+    "   - Example: If you have an element with `width: 100px`, `padding: 10px`, and `border: 5px`, its total width remains `100px`. This includes the content, padding, and border widths combined.\n",
+    "   - Margin remains outside and is not included in the total width or height.\n",
+    "\n",
+    "3. **Margins**\n",
+    "   - Margins are always outside the border and are not included in the width or height of an element, regardless of the `box-sizing` property.\n",
+    "   - Margins represent the space outside the element's border and are used to create space between elements.\n",
+    "\n",
+    "4. **Max-width and Max-height**\n",
+    "   - The `max-width` and `max-height` properties set the maximum size an element can grow to. They follow the same box model rules as `width` and `height`.\n",
+    "   - If `box-sizing` is `content-box`, these properties apply to the content size only, excluding padding and border.\n",
+    "   - If `box-sizing` is `border-box`, they apply to the content, padding, and border combined."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70ee3764",
+   "metadata": {},
+   "source": [
+    "# CSS Size Rendering Algorithm\n",
+    "\n",
+    "The way a browser determines the width and height of an element is a fundamental aspect of web layout. This process can be complex, as it depends on a variety of factors including the content of the element, CSS properties, and the behavior of parent and sibling elements. Here's a general guide:\n",
+    "\n",
+    "### 1. Content Size\n",
+    "- **Content**: The intrinsic size of the content (like text or images) often determines the initial size of an element. If the content is larger than the parent element or screen, it might overflow.\n",
+    "\n",
+    "### 2. CSS Properties\n",
+    "- **Width and Height**: Explicit `width` and `height` properties in CSS can define the size of an element. If not set, the size defaults to the size of its content or the size of its containing block.\n",
+    "- **Min/Max Width/Height**: `min-width`, `max-width`, `min-height`, `max-height` properties can also influence size, overriding the width/height in certain circumstances.\n",
+    "- **Padding, Border, and Margin**: These add to the total size of the element, except when `box-sizing: border-box` is used, where padding and border are included within the width/height.\n",
+    "- **Display Property**: Determines how an element is displayed. For example, `block` elements take up the full width of their parent, while `inline` elements only take up as much width as their content.\n",
+    "\n",
+    "### 3. Parent Element\n",
+    "- **Containing Block**: The parent element, or containing block, can constrain or influence the size of an element. For instance, a block-level element in a fixed-width container will adapt to the container's width.\n",
+    "- **Flexbox/Grid**: In modern layout systems like Flexbox and CSS Grid, parent containers have a significant impact on the size and position of their children.\n",
+    "\n",
+    "### 4. Viewport Size\n",
+    "- **Viewport**: The viewport size (browser window size) can affect elements, especially if their sizes are set using relative units like percentages or viewport units (`vw`, `vh`).\n",
+    "\n",
+    "### 5. Positioning and Floats\n",
+    "- **Positioning**: Elements with `absolute` or `fixed` positioning are taken out of the normal document flow, which can affect their size and the size of other elements.\n",
+    "- **Floats**: Floated elements can shrink to fit their content and affect the layout of adjacent elements.\n",
+    "\n",
+    "### 6. Special Cases\n",
+    "- **Overflow**: If an element's content is too large for the specified width/height, it will overflow. How this is handled depends on the `overflow` property.\n",
+    "- **Tables**: Table elements have a unique way of calculating width and height based on their content, rows, and columns.\n",
+    "\n",
+    "### Responsive Design\n",
+    "- **Media Queries**: In responsive design, media queries can change the size (and other properties) of elements based on the viewport size.\n",
+    "\n",
+    "### Sources for More Information\n",
+    "\n",
+    "1. **LambdaTest's Complete Guide to CSS Box Model**:\n",
+    "   - This guide delves into the intricacies of the CSS box model, explaining its components and their interactions. It emphasizes the importance of understanding the box model for optimal website performance and user experience, offering insights into how each layer of the box model contributes to the overall layout and spacing of web page elements.\n",
+    "\n",
+    "2. **MDN Web Docs' Introduction to the CSS Basic Box Model**:\n",
+    "   - MDN provides a detailed overview of the CSS basic box model, explaining how the browser's rendering engine represents each element as a rectangular box. It covers the four main areas of the box model: content, padding, border, and margin, and how these are defined by their respective edges. This resource is particularly useful for understanding the specific properties that control the dimensions of these areas.\n",
+    "\n",
+    "3. **Other Recommended Resources**:\n",
+    "   - **The CSS Handbook by freeCodeCamp**: Offers a practical guide to CSS for developers, including the box model concept.\n",
+    "   - **DigitalOcean's Guide on Working with the Box Model in CSS**: Provides insights into how the box model influences an element’s size and its interactions with other elements.\n",
+    "   - **MakeUseOf's Explanation of the CSS Box Model**: Describes the CSS box model as defined by the World Wide Web Consortium, explaining its components and their roles in HTML document layout."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "3dcd6b7d",
    "metadata": {},
    "source": [
