--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -711,7 +711,9 @@
     "      you can do reload() to do it right away - then no more of your code will execute\n",
     "      if you do setTimeout(), your handler might run if the delay is short (or might not)\n",
     "      all your code is cleared out when the new page is up\n",
-    "```"
+    "```\n",
+    "\n",
+    "NOTE: this example shows using `className`, but you can also use `classList` as an array and add/remove classes at runtime."
    ]
   },
   {
