Adding react links and commits.

--- a/typescript/React.ipynb
+++ b/typescript/React.ipynb
@@ -806,9 +806,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5db59398",
+   "metadata": {},
+   "source": [
+    "# Tutorial"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78c4cf48",
+   "metadata": {},
+   "source": [
+    "## Projects\n",
+    "-  [Default React App (JS)](https://github.com/davidpet/tutorials/tree/master/React/my-app)\n",
+    "-  [TS Tutorial Finished Product](https://github.com/davidpet/tutorials/tree/master/React/keeptrack)\n",
+    "\n",
+    "## Tutorial Commits\n",
+    "-  [Default React App (TS)](https://github.com/davidpet/tutorials/commit/78a41c622006dd172fd4dc4ad94fe1464d14f707)\n",
+    "-  [Lab 3: mini-css styling](https://github.com/davidpet/tutorials/commit/04395be5c7d8977f5eab78c32bbed0fb490c52bd)\n",
+    "-  [Lab 4: Your First Component](https://github.com/davidpet/tutorials/commit/718699f280f1b250847548d099ce5f55e2487995)\n",
+    "-  [Lab 5: Adding mocked data.](https://github.com/davidpet/tutorials/commit/26db4d7dfd880c9784dc0ac7bd0b2e3dae4b5ec2)\n",
+    "-  [Lab 6: Passing Data to Component](https://github.com/davidpet/tutorials/commit/56b22278ca48bcfd2b731f2144182fe472dbaa7e)\n",
+    "-  [Lab 7: Displaying List Data](https://github.com/davidpet/tutorials/commit/49da5dd42b4c089d084e561de447676dcb89ce95)\n",
+    "-  [Lab 8: Reusable Card Component](https://github.com/davidpet/tutorials/commit/cd01c4215b413b6c5a9b730f0f39f1ede13f1f9a)\n",
+    "-  [Lab 9: Adding button with click handler.](https://github.com/davidpet/tutorials/commit/8934486a5c7414a49d596561795e2371f227f1b0)\n",
+    "-  [Lab 10: Adding Form](https://github.com/davidpet/tutorials/commit/1d7fc40d6ad62518f7dcdd7d87c31ec062c9d6ab)\n",
+    "-  [Lab 11: Parent to Child Communication](https://github.com/davidpet/tutorials/commit/e903e92a3c6635cb4f4f37ef5a092f5792c786c6)\n",
+    "-  [Lab 12: Hiding/Showing edit form](https://github.com/davidpet/tutorials/commit/9465e6313dd201bb42f1efbce75b90faec66be4c)\n",
+    "-  [Lab 13: Cancel button](https://github.com/davidpet/tutorials/commit/ffc6482f01389bf0d630b4722030a4c3b66b0c6b)\n",
+    "-  [Lab 14: Form save button handling](https://github.com/davidpet/tutorials/commit/2b966ec8542121bd951d43f8295f7789b1c1085f)\n",
+    "-  [Lab 15: Form Data Binding](https://github.com/davidpet/tutorials/commit/e24800e83d79d1c9eb6386c9452c2a97a74e9ba5)\n",
+    "-  [Lab 16: Form Validation](https://github.com/davidpet/tutorials/commit/336d0bd021032182fec7ad058b5138e6c833728b)\n",
+    "-  [Lab 17: Adding fake REST backend](https://github.com/davidpet/tutorials/commit/3b609a6163f7fe3e920c85ab56f907ba0e65e1f6)\n",
+    "-  [Lab 18A: HTTP GET](https://github.com/davidpet/tutorials/commit/0b6a6cc7eb7eb4130c470b51babe54f0e0d5bf7a)\n",
+    "-  [Lab 18B: Adding pagination for HTTP GET](https://github.com/davidpet/tutorials/commit/3706bec8878f6f052c8ad20c156c829f4953dc28)\n",
+    "-  [Lab 19: HTTP PUT](https://github.com/davidpet/tutorials/commit/73030e7df616cf31ce594c6a217404b34f3762c0)\n",
+    "-  [Lab 20: Routing](https://github.com/davidpet/tutorials/commit/71f4513c32042b782e8cb138be7b47fd340090e7)\n",
+    "-  [Lab 21: Route Parameters](https://github.com/davidpet/tutorials/commit/af6a341f5defb4d0c0a61a2dc30b394983847bd1)\n",
+    "-  [Bug: ended link in wrong place](https://github.com/davidpet/tutorials/commit/97419ea82c2d4810ab4ab06ccdc007c9f2be8744)\n",
+    "-  [Lab 23-35: Migrating ProjectsPage to redux](https://github.com/davidpet/tutorials/commit/974d22df7bff8919403b993e4bd8777efc045ca0)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26c2bd9b",
+   "id": "adbb96d2",
    "metadata": {},
    "outputs": [],
    "source": []
