Adding info about JSON and fetch.

--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -538,6 +538,31 @@
   },
   {
    "cell_type": "markdown",
+   "id": "075af3f5",
+   "metadata": {},
+   "source": [
+    "# fetch()\n",
+    "\n",
+    "```\n",
+    "fetch() is a newer replacement for XMLHttpRequest\n",
+    "    fetch(url) -> gives you a promise with the data from the server\n",
+    "      fetch(url).then((response) => {\n",
+    "        if (response.ok) {\n",
+    "          console.log(response.json());\n",
+    "        }\n",
+    "      }).catch((error) => console.log(error));\n",
+    "    fetch(url, fields) -> same thing but can merge fields in\n",
+    "      eg. fetch(url, {headers: {}, method: 'GET'})\n",
+    "      some headers are set automatically by the browser in all fetch() requests\n",
+    "      when you provide your own, it will MERGE with those\n",
+    "    Chrome DevTools has a \"copy as fetch\" option so you can repeat an HTTP requests\n",
+    "  \n",
+    "  for gRPC, you need a special proxy that lets you fetch() from a JS client in a browser\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "476cbdc8",
    "metadata": {},
    "source": [
