--- a/typescript/Strings and Printing.ipynb
+++ b/typescript/Strings and Printing.ipynb
@@ -705,7 +705,11 @@
    "source": [
     "# Serialization\n",
     "\n",
-    "Use `JSON.stringify` and `JSON.parse` for instance. Or use Google's **protobuf** library.\n"
+    "Use `JSON.stringify` and `JSON.parse` for instance. Or use Google's **protobuf** library.\n",
+    "\n",
+    "NOTE: JSON format is just a subset of JS syntax - it's not literally JS syntax. For instance, it's very strict about putting double quotes instead of single quotes around keys.\n",
+    "\n",
+    "Thus, even if you are already in JS, there are benefits to using `JSON.stringify()`, for instance in sending a web requests."
    ]
   },
   {
