Some additional notes from studying React.

--- a/typescript/Classes.ipynb
+++ b/typescript/Classes.ipynb
@@ -1163,7 +1163,9 @@
    "source": [
     "# Object\n",
     "\n",
-    "_All classes_ inherit from Object even if no base class.\n"
+    "_All classes_ inherit from Object even if no base class.\n",
+    "\n",
+    "NOTE: `.equals()` is not actually a method of `Object`, which is why primitives and collections don't have it.  It is just a convention brought over from Java where if you want to do value comparison, you can add that method."
    ]
   },
   {
