--- a/typescript/React.ipynb
+++ b/typescript/React.ipynb
@@ -323,6 +323,13 @@
     "       - read from `myVar` and write by calling `setMyVar`\n",
     "       - `setMyVar()` can take the __new state__ or a __function that accepts old and returns new__\n",
     "       - you can call it as a generic method if needed (eg. `useState<MyClass[]>(MY_CLASS_INSTANCES);`\n",
+    "     - the returned setter function updates the state __after rendering__\n",
+    "       - the current value will not change when you read it again during the current iteration\n",
+    "       - if you need the value to __update cumulatively__ during the same iteration, pass a __function__ to the setter\n",
+    "          - functions passed to the setter are queued to run after the render, so they can build on each other\n",
+    "       - in the case of __multiple calls__ to `useState()`, the order determines which variable you get\n",
+    "         - it is therefore expected that you will call it the same # of times in the same order for the same component\n",
+    "            - you are supposed to call it at the top - it won't work properly if you call in a loop or something like that\n",
     "     - NOTE: __redux__ is an alternative to this kind of state management\n",
     "  - eg. `import {useEffect} from 'react';`\n",
     "     - `useEffect(() => {...});` lets you queue up a lambda to get called after the component is rendered\n",
@@ -593,8 +600,10 @@
    "source": [
     "# Re-Rendering\n",
     "\n",
-    "1. Triggered by __props update__ (via `===`)\n",
-    "1. Triggered by state update via `setStae()` or the function returned by `useState()`\n",
+    "1. Triggered by __props update__ (via `===` on each field of the props separately)\n",
+    "   - thus if one of the props fields is an object and you change its field, that won't trigger an update unless you build a new object from it\n",
+    "1. Triggered by state update via `setState()` or the function returned by `useState()`\n",
+    "   - only if the state variable changes as seen by `Object.is()` (which is almost equivalent to `===` but not quite exactly)\n",
     "1. Triggered by parent being re-rendered\n",
     "1. React is very efficient about only updating the real DOM as needed based on the virtual DOM rendered, but re-rendering too much in the virtual DOM can be a source of performance issues too.  When a performance issue is found, __wasted renders__ may be the culprit.\n",
     "1. You can use `memo` to help avoid wasted renders."
