--- a/typescript/Variables and Operators.ipynb
+++ b/typescript/Variables and Operators.ipynb
@@ -398,7 +398,9 @@
     "\n",
     "`==` and `===` are equivalent for reference types like objects and arrays, but a little different for numbers and strings.  In JavaScript, `==` does a conversion (eg. number to string) before the comparison, whereas `===` does not, which is why they say it's a value and type equality.\n",
     "\n",
-    "In TypeScript, it is recommended, and often enforced, to only ever use `===` and just pretend `==` does not exist.  That way, you don't have to worry about the differences or any weird automatic behavior."
+    "In TypeScript, it is recommended, and often enforced, to only ever use `===` and just pretend `==` does not exist.  That way, you don't have to worry about the differences or any weird automatic behavior.\n",
+    "\n",
+    "NOTE: x.equals(y) doesn't exist on primitives or built-in collections - that is something you add yourself on your own classes if needed."
    ]
   },
   {
@@ -494,6 +496,72 @@
     "  // Value Equality for Custom Objects (property comparison)\n",
     "  console.log(obj1.value === obj2.value); // Output: true\n",
     "})();\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c15c2ab",
+   "metadata": {},
+   "source": [
+    "# Object.is()\n",
+    "\n",
+    "The version of JS used by Jupyter doesn't support this feature yet, but I ran the examples in Chrome Devtools to verify the results.\n",
+    "\n",
+    "__Signed zeroes__ exist and are technically distinct in JS, but `==` and `===` compare them as equivalent as you'd expect/hope.  `Object.is()` does not compare them as equivalent.\n",
+    "\n",
+    "__NaN__ values do not compare as equivalent (same behavior as Python), except when you use `Object.is()`.\n",
+    "\n",
+    "Other than those two cases, `Object.is()` is basically `===`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "55d55bc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0\n",
+      "0\n",
+      "true\n",
+      "true\n",
+      "false\n",
+      "false\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    const x = -0;\n",
+    "    const y = +0;\n",
+    "    \n",
+    "    console.log(x);\n",
+    "    console.log(y);\n",
+    "    \n",
+    "    console.log(x == y); // true\n",
+    "    console.log(x === y); // true\n",
+    "    // console.log(Object.is(x, y)); // false (doesn't run in jupyter)\n",
+    "    \n",
+    "    const a = NaN;\n",
+    "    const b = NaN;\n",
+    "    \n",
+    "    console.log(a == b); // false\n",
+    "    console.log(a === b); // false\n",
+    "    // console.log(Object.is(a, b)); // true (doesn't run in Jupyter)\n",
+    "})();"
    ]
   },
   {
