JS snippet additions/improvements.

--- a/javascript/Vanilla JS Syntax.ipynb
+++ b/javascript/Vanilla JS Syntax.ipynb
@@ -300,7 +300,9 @@
     "- __abstract__\n",
     "- __generics__\n",
     "- __enums__\n",
-    "- __decorators__"
+    "- __decorators__\n",
+    "- `?` and `!` for function params and class members\n",
+    "- `override` keyword for stating a method is meant to override"
    ]
   },
   {
