--- a/python/Built-In Libraries.ipynb
+++ b/python/Built-In Libraries.ipynb
@@ -968,7 +968,9 @@
    "id": "48357ab0",
    "metadata": {},
    "source": [
-    "# asyncio\n"
+    "# asyncio\n",
+    "\n",
+    "NOTE: you cannot mark a lambda as `async`, so you have to use an inline function instead."
    ]
   },
   {
