--- a/python/Caveats.ipynb
+++ b/python/Caveats.ipynb
@@ -1861,9 +1861,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "708f1da7",
+   "metadata": {},
+   "source": [
+    "# Base Constructor\n",
+    "\n",
+    "The base constructor is __not automatically called__ nor required to be called.  So you will usually want to __call it explicitly__."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8e3ceb99",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi again\n",
+      "hi\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Myclass:\n",
+    "    def __init__(self):\n",
+    "        print('hi')\n",
+    "\n",
+    "class DerivedClass(Myclass):\n",
+    "    def __init__(self):\n",
+    "        print('hi again')\n",
+    "        \n",
+    "class OtherDerivedClass(Myclass):\n",
+    "    pass\n",
+    "\n",
+    "d = DerivedClass()\n",
+    "o = OtherDerivedClass()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2d43faf2",
+   "id": "04a6527f",
    "metadata": {},
    "outputs": [],
    "source": []
