--- a/typescript/Angular.ipynb
+++ b/typescript/Angular.ipynb
@@ -2270,7 +2270,9 @@
     "\n",
     "- **Reset Button**: A button to clear all inputs in the form.\n",
     "\n",
-    "This form includes a mix of different controls that are commonly used in web forms, providing a good overview of the capabilities of HTML forms."
+    "This form includes a mix of different controls that are commonly used in web forms, providing a good overview of the capabilities of HTML forms.\n",
+    "\n",
+    "NOTE: while the user is typing into a text input, it will emit `input` events per keystroke but `change` events only after __blurring__."
    ]
   },
   {
