--- a/typescript/Classes.ipynb
+++ b/typescript/Classes.ipynb
@@ -350,7 +350,9 @@
    "source": [
     "# super() call required!\n",
     "\n",
-    "Just like Python - the base won't be automatically called. However, unlike Python, the compiler will force you.\n"
+    "Just like Python - the base won't be automatically called. However, unlike Python, the compiler will force you.\n",
+    "\n",
+    "That only applies in TS - JS will not care if you leave it out (like Python)."
    ]
   },
   {
@@ -5632,9 +5634,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "35955536",
+   "metadata": {},
+   "source": [
+    "# Undefined Member\n",
+    "\n",
+    "The behavior of a variable that isn't initialized in a class declaration has changed in __ES2020__.  It used to mean nothing - as it does below.\n",
+    "\n",
+    "Now, it means overriding with `undefined`.  You can see that in Chrome DevTools by pasting this.\n",
+    "\n",
+    "It is not a JS vs. TS difference."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "28320f84",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n",
+      "undefined\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    class MyBase {\n",
+    "        x = 5;\n",
+    "        y;\n",
+    "    }\n",
+    "    \n",
+    "    class MyDerived extends MyBase {\n",
+    "        x;\n",
+    "    }\n",
+    "    \n",
+    "    const m = new MyDerived();\n",
+    "    console.log(m.x);\n",
+    "    console.log(m.y);\n",
+    "})();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "db2c21e2",
+   "id": "b23bbe76",
    "metadata": {},
    "outputs": [],
    "source": []
