--- a/typescript/Functions.ipynb
+++ b/typescript/Functions.ipynb
@@ -1696,9 +1696,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cb4c5ac3",
+   "metadata": {},
+   "source": [
+    "# Default Return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "251e5f1d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "undefined\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "undefined"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(() => {\n",
+    "    function f() {}\n",
+    "    const x = f();\n",
+    "    console.log(x);\n",
+    "})();"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0cac9247",
+   "id": "905e4259",
    "metadata": {},
    "outputs": [],
    "source": []
