--- a/typescript/React.ipynb
+++ b/typescript/React.ipynb
@@ -249,7 +249,40 @@
     "\n",
     "This is the name for a technique where instead of returning an element, a function returns a function that returns an element.  This can give you the ability to dynamically determine things like which props to pass in, etc.\n",
     "\n",
-    "It can also refer to a function that takes a function, where the higher-level function is itself a component."
+    "It can also refer to a function that takes a function, where the higher-level function is itself a component.\n",
+    "\n",
+    "## PropTypes\n",
+    "\n",
+    "The TS version of React has type safety built into it already via `interface`, but the JS version does not.  Thus, PropTypes are an __additional feature for pure JS__ to allow for type checking on props passed into components.\n",
+    "\n",
+    "You have to `npm install prop-types` (separate library) to use it.  Then source the script in your `index.html` so the code is available at runtime.\n",
+    "\n",
+    "Then you set a `propTypes` property on the component function, as in this example:\n",
+    "\n",
+    "```JavaScript\n",
+    "import PropTypes from \"prop-types;\"\n",
+    "\n",
+    "// other code here\n",
+    "\n",
+    "Greeter.propTypes = {\n",
+    "  name: PropTypes.string.isRequired,\n",
+    "};\n",
+    "```\n",
+    "\n",
+    "React will automatically use the `propTypes` property of a component function to generate a __console warning__ at runtime if you pass the wrong fields into the component.\n",
+    "\n",
+    "Here is a more complex example:\n",
+    "```JavaScript\n",
+    "UserGreeting.propTypes = {\n",
+    "    user: PropTypes.shape({  // custom object\n",
+    "        name: PropTypes.string.isRequired,\n",
+    "        age: PropTypes.number.isRequired,\n",
+    "        hobby: PropTypes.string // Optional field within the object\n",
+    "    }).isRequired,\n",
+    "    onNameChange: PropTypes.func.isRequired, // function\n",
+    "    optionalField: PropTypes.string // Optional prop\n",
+    "};\n",
+    "```"
    ]
   },
   {
@@ -276,6 +309,8 @@
     "      ))}\n",
     "    </ul>\n",
     "    ```\n",
+    "  - things like string variables can be included without having to put quotes around them, because TSX/JSX will understand the kind of object \n",
+    "    - eg. `<a href={myHrefStringVariable}>`\n",
     "- certain attributes in TSX/JSX are remapped from their HTML counterparts\n",
     "  - JSX/TSX attempts to follow JS/TS conventions instead of being an extension of HTML\n",
     "    - this is because it gets converted into code (and also for \"consistency\")\n",
