--- a/typescript/Standard Library.ipynb
+++ b/typescript/Standard Library.ipynb
@@ -196,7 +196,9 @@
     "\n",
     "Basically a promise is a chainable async object, and setTimeout is used here to simulate asynchronicity.  If you ommit the timeout, it will go into the browser's event loop queue after whatever is already there currently.\n",
     "\n",
-    "When you call APIs that make HTTP requests, etc. you will get back promises that are actually asynchronous.\n"
+    "When you call APIs that make HTTP requests, etc. you will get back promises that are actually asynchronous.\n",
+    "\n",
+    "__Chaining__ promises with `.then()` is flexible.  The value returned by each `.then()` can be either a __single value__ or a __promise__.  Then the `.then()` call itself returns a promise.  Thus, you can either keep mapping single values or automatically unwrap other promises based on the value of the previous promise and keep the chain going.  If you wanted to prevent the automatic unwrapping, you'd need to hide it in an array or something."
    ]
   },
   {
@@ -389,6 +391,9 @@
     "Summary of async/await:\n",
     "\n",
     "- you put `async` in front of a function to make it async\n",
+    "  - this goes for __lambdas__ and __function expressions__ too\n",
+    "    - `async` comes before the rest of the lambda/expression\n",
+    "    - note that an async lambda will be protected from garbage collection while it executes\n",
     "- an async function must return a `Promise<T>` in the signature\n",
     "- but inside the function, it pretends to return a `T` instead (autowrapped by Promise)\n",
     "- anybody who calls the function gets a `Promise<T>` that should eventually resolve to what you return\n",
@@ -666,6 +671,8 @@
     "    the main starting point for DOM manipulation\n",
     "    \n",
     "    Getting Single Elements\n",
+    "```\n",
+    "```JavaScript\n",
     "        const element: HTMLElement|null = document.getElementById('myId');\n",
     "        if (element) {\n",
     "          const buttonElement: HTMLButtonElement = element as HTMLButtonElement;\n",
@@ -676,35 +683,55 @@
     "        if (myDiv) {\n",
     "            // TypeScript knows `myDiv` is a div element\n",
     "            myDiv.style.backgroundColor = \"blue\";\n",
+    "            // note that in JS, the CSS properties look camelCase\n",
+    "            // but in CSS, they are more like background-color\n",
     "        }\n",
+    "```\n",
+    "```\n",
     "    Getting Multiple Elements\n",
+    "```\n",
+    "```JavaScript\n",
     "        document.getElementsByClassName('myClass')\n",
     "        document.getElementsByTagName('myTag')\n",
     "        document.querySelectorAll('myTag.myClass')\n",
-    "\n",
+    "```\n",
+    "```\n",
     "        these return array-like objects that aren't true arrays\n",
     "          can make into true arrays with Array.from()\n",
     "        return empty collection instead of null when not found\n",
-    "\n",
+    "    Getting Elements from Other Elements\n",
+    "```\n",
+    "```JavaScript\n",
+    "        element.getElementsByClassName('myClass')\n",
+    "        element.querySelectorAll('.myClass')\n",
+    "        // and the rest as if document\n",
+    "```\n",
+    "```\n",
     "    Events\n",
+    "```\n",
+    "```JavaScript\n",
+    "        // notice the event names don't have the 'on' part in JS (only HTML)\n",
     "        myDiv.addEventListener('click', (event) => {\n",
     "          event.preventDefault(); // or stopPropagation, whatever you want\n",
     "          console.log('clicked!');\n",
     "        });\n",
     "\n",
     "        element.dispatchEvent(event) to dispatch an event yourself\n",
-    "          can be one of the built-in ones or your own\n",
-    "          an event has a name and an event object with properties (like addEventListener shows)\n",
-    "          eg. const myEvent = new CustomEvent('myCustomEvent', {\n",
+    "          // can be one of the built-in ones or your own\n",
+    "          // an event has a name and an event object with properties (like addEventListener shows)\n",
+    "          const myEvent = new CustomEvent('myCustomEvent', {\n",
     "                  detail: { message: 'Hello from custom event!' }\n",
     "              });\n",
     "    \n",
     "        myDiv.removeEventListener('click', fn); // fn must be same reference you added for this to work\n",
-    "          if an element is remove from the DOM, it is considered good practice to remove the listeners\n",
-    "          although modern browsers SHOULD be able to figure this out\n",
-    "            if they don't, it would be a memory leak\n",
-    "    \n",
+    "          // if an element is remove from the DOM, it is considered good practice to remove the listeners\n",
+    "          // although modern browsers SHOULD be able to figure this out\n",
+    "            // if they don't, it would be a memory leak\n",
+    "```\n",
+    "```\n",
     "    Adding DOM Elements\n",
+    "```\n",
+    "```JavaScript\n",
     "      const newDiv: HTMLDivElement = document.createElement('div');\n",
     "      newDiv.id = 'new-div';\n",
     "      newDiv.innerText = 'This is a new div.';\n",
@@ -715,14 +742,19 @@
     "      if (container) {\n",
     "          container.appendChild(newDiv);\n",
     "      }\n",
-    "\n",
+    "```\n",
+    "```\n",
     "    Removing DOM Elements\n",
+    "```\n",
+    "```JavaScript\n",
     "      element.parentNode.removeChild(element)\n",
     "      element.remove() // more direct, but not supported in IE\n",
+    "```\n",
+    "```\n",
     "        polyfill can fix that though\n",
     "  location: Location\n",
     "    for dealing with url and host type stuff\n",
-    "\n",
+    "```\n",
     "    href = current page url\n",
     "      can also use toString()\n",
     "    various properties for components of the URL, such as hostname, search, port, etc.\n",
@@ -731,7 +763,7 @@
     "    replace(url: string) to navigate to another page without adding a back button entry\n",
     "    assign(url: string) to navigate to another page with a back button entry\n",
     "      you can also change location.href and do location.reload()\n",
-    "      \n",
+    "```\n",
     "    if you change 'href', it will navigate to the new page after the current code finishes\n",
     "      you can do reload() to do it right away - then no more of your code will execute\n",
     "      if you do setTimeout(), your handler might run if the delay is short (or might not)\n",
